@@ -35,7 +35,7 @@
 			<label index="list.header">Listing of broken links</label>
 			<label index="list.tableHead.path">Path</label>
 			<label index="list.tableHead.type">Type</label>
-			<label index="list.tableHead.headline">Title</label>
+			<label index="list.tableHead.headline">Headline</label>
 			<label index="list.tableHead.field">Field</label>
 			<label index="list.tableHead.headlink">Link</label>
 			<label index="list.tableHead.linktarget">URL / Link Target</label>
